@@ -2072,14 +2072,15 @@ void do_output(char *output, size_t output_len, bool allow_cntrls)
 	    if (do_wrap(openfile->current))
 		edit_refresh_needed = TRUE;
 #endif
+    }
 
 #ifndef DISABLE_COLOR
-	/* If color syntaxes are available and turned on, we need to
-	 * call edit_refresh(). */
-	if (openfile->colorstrings != NULL && !ISSET(NO_COLOR_SYNTAX))
-	    edit_refresh_needed = TRUE;
+    /* If syntax highlighting is turned on and there are multiline regexes,
+     * the edit window will need to be refreshed. */
+    if (!ISSET(NO_COLOR_SYNTAX) && openfile->syntax &&
+		openfile->syntax->nmultis > 0)
+	edit_refresh_needed = TRUE;
 #endif
-    }
 
 #ifndef NANO_TINY
     /* Well, we might also need a full refresh if we've changed the
